2007-05-22  Yen-Ju Chen <yjchenx at gmail>

	* Use NSTimer and NSRunLoop for timeout, which simplify the code.
	* Turn off Startup-notification and XCursor for now.
	* Disable menu by default.

2007-05-21  Yen-Ju Chen <yjchenx at gmail>

	* Include etoile.make for clean build.
	* Simplify AZMainLoop and signal handling.

2007-05-20  Yen-Ju Chen <yjchenx at gmail>

	* Add etoile.make patched by Frédéric Point (Bug #9164).
	* Do not include GNUmakefile.postamble.
	  It is supposed to be the right way for current design.

2007-05-07  Yen-Ju Chen <yjchenx at gmail>

	* GNUmakefile.preamble:
	  Do not link to XWindowServerKit if building along.
	  etoile.make should take care of building etoile as whole.

2007-04-26  Yen-Ju Chen <yjchenx at gmail>

	* Fix a show blocker in window stacking !!

2007-04-25  Yen-Ju Chen <yjchenx at gmail>

	* Spot an error, though no side-effect is observed before the fix.
	* Update to r5751 except client placement and startup notification.
	* Update to r5822 (skipping r5777:5778). 
	  Hope there is not side effect.
	* Update to r5830. 
	* Update to r5836. 
	* Update to r5842. 
	* Update to r5844. 

2007-04-24  Yen-Ju Chen <yjchenx at gmail>

	* Fix a boundary bug, Phew...

2007-04-18  Yen-Ju Chen <yjchenx at gmail>

	* Fix crash when switching between a GNUstep modal window 
	  and a regular window.

2007-04-14  Yen-Ju Chen <yjchenx at gmail>

	* Update to r5739.
	* Make sure GNUstep stacking work with ConfigureRequest.

2007-04-11  Yen-Ju Chen <yjchenx at gmail>

	* Fix window level bug which crashes GNUstep application.

2007-04-06  Yen-Ju Chen <yjchenx at gmail>

	* Updating maximize and fullscreen.
	* Remove pipe menu.
	* Finish updating to r5731 except client placement 
	  and startup notification which are less important.

2007-04-05  Yen-Ju Chen <yjchenx at gmail>

	* Partially update to HEAD of OpenBox3.
	* Remove focus-follow-mouse.
	* Finish up AZStacking.

2007-04-04  Yen-Ju Chen <yjchenx at gmail>
